--- a/playbook-dependencias.yml
+++ b/playbook-dependencias.yml
@@ -14,3 +14,14 @@
       name:
         - django
         - djangorestframework
+  
+  - name: Iniciando projeto
+    shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
+    ignore_errors: yes
+
+  - name: Alterando host do settings
+    lineinfile:
+      path: /home/ubuntu/tcc/setup/settings.py
+      regexp: 'ALLOWED_HOSTS'
+      line: 'ALLOWED_HOSTS = ["*"]'
+      backrefs: yes
